Update Java (including preview), JMH, dependencies and some Maven plugins