@@ -3,8 +3,10 @@
 Arbitrary Java performance benchmarks, implemented with [JMH](http://openjdk.java.net/projects/code-tools/jmh/).
 You can run them with:
 
-    mvn clean install
-    java -jar target/benchmarks.jar <BENCHMARK_CLASS_NAME>
+	mvn clean install
+	java --enable-preview -jar target/benchmarks.jar ${BENCHMARK}
+
+Replace `${BENCHMARK}` with either a package or class name to run just the specified tests.
 
 Benchmarks:
 
